style.css
header {
  height: 40px;
}

.header-top {
  max-width: 100%;
}

.header-bottom {
  display: none;
}

.nav-date-login {
  max-width: 1310px;
  justify-content: flex-end;
}

.nav-date {
  display: none;
}

.nav-sub-singin {
  font-size: 16px;
  font-weight: 700;
  color: #fff;
  font-family: 'Roboto', sans-serif;
}

.nav-sub-singin i {
  font-size: 28px;
  color: rgb(251, 154, 148);
}

.nav-button-subscribe {
  background-color: white;
  color: rgb(247, 34, 16);
  border: none;
  font-weight: 700;
}

.nav-logo {
  position: absolute;
  width: 132px;
  height: 20px;
  top: 10px;
  left: 10px;
}

.first-image img {
  vertical-align: middle;
  width: 100%;
}

.nav-logo a img {
  height: 20px;
  width: 100%;
}

.main-content {
  color: #333;
  font-size: 13px;
  line-height: 18px;
  font-family: 'Roboto', sans-serif;
  background-color: #fff;
  max-width: 1310px;
  margin: auto;
  padding: 20px 20px 0 20px;
}

.row {
  flex-wrap: wrap;
  margin-right: -15px;
  margin-left: -15px;
}

.text-and-link span,
.text-and-link a small,
.logo-and-title span,
.see-all-features,
.gray-titles,
.category,
.category span,
.media-body a,
.media-body p,
.red-btn,
.text-us,
.four-section-title,
.sign-up-text,
.btn-sign-up,
.update {
  font-weight: bold;
  font-family: "Roboto Condensed", sans-serif;
}

/* TOP STORIES */
.gray-titles {
  color: #03030366;
  font-size: 16px;
  display: block;
  background-color: white;
}

.top-stories-title {
  padding-bottom: 11px;
  padding-top: 5px;
}

.img-top {
  width: 100%;
  position: relative;
  min-height: 140px;
}

.wrapping-text-image {
  position: relative;
  min-height: 150px;
}

.category,
.category span {
  font-size: 17px;
  color: #f72210;
  text-decoration: none;
}

.category {
  display: block;
  padding: 8px 15px 9px;
  background-color: rgba(255, 255, 255, 0.9);
  position: absolute;
  bottom: 0;
}

.image-small a {
  width: 100%;
}

.media-body a {
  margin-bottom: 30px;
  color: black;
  font-size: 17px;
}

.tag a {
  text-decoration: none;
  color: black;
  display: inline-block;
  background-color: #c2d4d7;
  padding-left: 6px;
  padding-right: 6px;
  margin-right: 6px;
  margin-bottom: 6px;
}

.small-title h5 {
  font-size: 17px;
  line-height: 18px;
}

.title-article h5 {
  font-size: 24px;
  line-height: 24px;
  font-weight: 800;
  color: black;
  text-decoration: none;
  list-style: none outside none;
  font-family: 'Roboto Condensed', sans-serif;
  max-width: 100%;
  position: relative;
}

.image-text-small a h5 {
  color: #000;
  font-weight: 700;
  font-size: 17px;
  font-family: "Roboto Condensed", sans-serif;
  display: inline-block;
  width: 100%;
}

.see-all-features a {
  color: black;
}

.four-section-title a {
  color: #f72210;
}

.icons-footer li a {
  color: #666;
}

.footer-sections li a {
  color: rgb(102, 102, 102);
}

.media-body a:hover,
.image-text-small a h5:hover {
  color: #f72210;
  text-decoration-line: none;
}

.tag a:hover {
  background-color: #272727;
  color: #c2d4d7;
}

.category a:hover {
  text-decoration: none;
}

.title-article:hover {
  text-decoration: underline #f72210;
  color: black;
}

.text {
  font-family: Arial, Helvetica, sans-serif;
  max-width: 100%;
  position: relative;
  font-size: 13px;
}

/* MORE STORIES */
.more-stories {
  padding-top: 0;
}

.small-content {
  border-bottom: 1px solid #ddd;
}

.more-stories-row {
  border-top: 1px solid #ddd;
}

/* CULTURE AND TRAVEL */
.culture-title {
  background-color: #f4f5f7;
  color: rgba(3, 3, 3, 0.5);
  font-family: 'Roboto Condensed', sans-serif;
  font-size: 16px;
}

.small-title-article {
  color: #333;
  font-size: 20px;
  line-height: 18px;
  font-family: 'Lora', serif;
  text-decoration: none;
}

.small-title-article:hover {
  text-decoration: none;
  color: #333;
}

.culture-text {
  font-size: 15px/20px;
  font-family: "Helvetica Neue", "Helvetica", Arial, sans-serif;
  color: rgba(39, 39, 39, 0.5);
  margin-bottom: 10px;
}

/* OPINION */
.media-body p {
  line-height: 21px;
  color: #555;
  margin-top: 4px;
  font-size: 14px;
}

/* LATEST NEWS */
.image-text-small {
  padding-bottom: 10px;
}

.image-text-small::after {
  display: block;
  clear: both;
  content: "";
}

.image-small {
  /* float: left; */
  margin-right: 15px;
  clear: right;
}

.us-row {
  border-bottom: 1px solid #ddd;
}

.image-small a img {
  position: relative;
  width: 100%;
  vertical-align: middle;
  padding-left: 15px;
}

.image-text-small a:hover {
  text-decoration-line: none;
}

.us-text-small {
  padding: 0;
  border: none;
}

/* SIGN UP */
.sign-up {
  background-color: #f4f5f6;
}

.n-logo {
  display: block;
  width: 29px;
  height: 28px;
  background-color: #f72210;
}

.sign-up-text {
  font-size: 19px;
  margin-bottom: 10px;
}

.btn-sign-up {
  display: inline-block;
  padding: 10px 10px 10px 20px;
  color: white;
  font-size: 18px;
  text-transform: uppercase;
  margin-bottom: 15px;
  background-color: #666;
  border: none;
  width: 100px;
}

.btn-sign-up:hover {
  background-color: #999;
  text-decoration: none;
  color: white;
}

.btn-sign-up i {
  font-size: 15px;
}

.update {
  color: #333;
  font-size: 15px;
}

.update:hover {
  text-decoration-line: none;
}

/* BIG COVER PHOTO */
.big-cover {
  position: relative;
  width: 100%;
  padding-right: 15px;
  padding-left: 15px;
}

.see-all-features {
  background-color: #f4f5f6;
  color: black;
  text-align: center;
  font-size: 18px;
  text-transform: uppercase;
  margin: 0 15px;
}

.see-all-features a:hover {
  text-decoration: none;
}

.see-all-features:hover {
  background-color: #dbdcdd;
}

/* N IN THE MAGAZINE */
.logo-and-title {
  text-align: center;
}

.logo-and-title span {
  font-size: 19px;
}

.text-and-link span,
.text-and-link a small {
  font-size: 16px;
}

.text-and-link span,
.in-focus {
  padding: 0 7px;
  background-color: #f72210;
  color: white;
}

.text-and-link a small {
  color: #f72210;
}

.text-and-link a:hover {
  text-decoration-line: none;
}
/* ... */

